--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -14,7 +14,9 @@
     "@babel/eslint-parser": "^7.25.9",
     "@babel/node": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^2.0.15"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -22,6 +24,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "express-swagger-generator": "^1.1.17",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "node-fetch": "^2.7.0"
